# historical-projects

./: README  README.md  SignalProcessing.sln  TODO
algorithm/amazon_tasks/: CMakeLists.txt  amazon.cpp
algorithm/ch_1_basics/: CMakeLists.txt  basics.cpp  fibonacci.cpp  fibonacci.h  gcd.cpp  gcd.h  pi.cpp  pi.h  sieve.cpp  sieve.h
boost_ex/multiindex/: CMakeLists.txt  multi.cpp
concurrency/ch08_lockfree/: CMakeLists.txt
csc/prime/: CMakeLists.txt  Makefile  prime.cpp  primetest.cpp  primetest_ntl.h  primetest_simple.h
gui_prototype2/: CMakeLists.txt  Resource.h  controls.h  gui_prototype.cpp  gui_prototype.rc  stdafx.cpp  stdafx.h
interation/: CMakeLists.txt
interation/include/: integr.h  integration.h
interation/src/: integr.cpp  integration.cpp
primetest-mt/: CMakeLists.txt  polynome-big.h  prime-mt.cpp  prime-mt.h  prime.cpp  uint-big.h
primetest/ntl/: CMakeLists.txt
primetest/prime/: CMakeLists.txt  prime.cpp  primetest_ntl.h  primetest_simple.h
satter1/task_19_koenig_lookup/: CMakeLists.txt  koenig.cpp
scripts/: CMakeLists.txt  Makefile  Makefile.1  Makefile.2  backup.cmd  backup_torrent.cmd  backup_win.cmd  build_boost.cmd  create_cmake.py  download_wget_counter.sh  loop.cmd  makecmake.sh  makemake.sh  mass_rename.py  remove_svn.sh
so_example/exec1/: CMakeLists.txt  templ.cpp
so_example/shared1/: CMakeLists.txt  wrapper.cpp  wrapper.h
so_example/static1/: CMakeLists.txt  file1.cpp  file1.h
so_example/static2/: CMakeLists.txt  file2.cpp  file2.h
stl-performance/: CMakeLists.txt  TODO.txt  app.cpp  clock_count.h  command_line_params.h  performance_test.vcproj  randint.h  random_data_generator.h  special.h  stl.h  test_container.h  test_result.h
strauscpp3/: CMakeLists.txt  create_cmake.py
strauscpp3/ch_03_basics/: CMakeLists.txt  about.txt  c_vs_cpp.txt  casts.txt  iterators.cpp  links.txt  operations_priority.txt  optimizations.txt  straus25.txt
strauscpp3/ch_04_types/: CMakeLists.txt  about.txt  bit_operations.cpp  bit_operations.h  fp_exceptions.cpp  fpoint.cpp  types.cpp
strauscpp3/ch_07_functions/: CMakeLists.txt  about.txt  functions.cpp
strauscpp3/ch_08_namespaces/: CMakeLists.txt  about.txt  exceptions.cpp  exceptions.h  main.cpp  namespaces.cpp  namespaces.h  rsdn_example.cpp  rsdn_example.h  tests.cpp  tests.h
strauscpp3/ch_09_linkage/: CMakeLists.txt  about.txt  file1.cpp  file1.h  file2.cpp  main.cpp
strauscpp3/ch_10_classes/: CMakeLists.txt  about.txt  class.cpp  class.h  construct.cpp  construct.h  intset_t.cpp  intset_t.h  main.cpp  memory_pool.cpp  memory_pool.h  new_forms.cpp  new_forms.h  proxy.h  ref_count.h  user_allooc.cpp  user_allooc.h  word_counter.cpp  word_counter.h
strauscpp3/ch_11_operators/: CMakeLists.txt  about.txt  complex.cpp  complex.h  complex_matrix.cpp  main.cpp  smart_ptr.h
strauscpp3/ch_12_inheritance/: CMakeLists.txt  about.txt  final.cpp  final.h  main.cpp  multimethod.cpp  virtual.h
strauscpp3/ch_12_inheritance_1/: about.txt  abstract.h  main.cpp  virtual.h
strauscpp3/ch_13_templates/: CMakeLists.txt  about.txt  alg_tmpl.h  bind_tmpl.h  class_tmpl.h  func_tmpl.h  main.cpp  tmpl.h
strauscpp3/ch_14_exceptions/: CMakeLists.txt  about.txt  autoptr.cpp  autoptr.h  controlled.cpp  controlled.h  ex.cpp  ex.h  finished.cpp  finished.h  main.cpp  sehhandler.cpp  sehhandler.h  structured_exception.cpp  structured_exception.h  zero_divide.cpp
strauscpp3/ch_15_inheritance2/: CMakeLists.txt  about.txt  abstract.h  adapter.cpp  adapter.h  classes.h  currency.cpp  main.cpp  virtual.h
strauscpp3/ch_15_inheritance_2/: about.txt  final.h  main.cpp  multimethod.h  simple.cpp  simple.h
strauscpp3/ch_16_containers/: CMakeLists.txt  about.txt  containers.cpp  containers.h  lvector.h  vect_client.cpp
strauscpp3/ch_17_containers2/: CMakeLists.txt  about.txt  containers2.cpp  containers2.h  hash_test.cpp  main.cpp  test_bitset.cpp  test_bitset.h
strauscpp3/ch_18_algorithms/: CMakeLists.txt  about.txt  adapters.cpp  adapters.h  algorithm.cpp  algorithm.h  binders_test.cpp  main.cpp  predicates.h
strauscpp3/ch_19_iterators/: CMakeLists.txt  about.txt  checked_iterator.h  custom_allocator.h  main.cpp
strauscpp3/ch_20_string/: CMakeLists.txt  about.txt  main.cpp
strauscpp3/ch_21_iostream/: CMakeLists.txt  about.txt  c_library_io.cpp  file_streams.cpp  formatted_user_input.h  main.cpp  standard_streams.cpp  stream_manipulator.cpp  streams.h  string_streams.cpp  wide_char_streams.cpp
strauscpp3/ch_22_numeric/: CMakeLists.txt  about.txt  main.cpp  matrix.h  slice_iter.h
tmpl/: CMakeLists.txt  create_cmake.py  tmpl.sln
tmpl/ch_02_basics/: CMakeLists.txt  about.h  basics_tmpl.h  class_tmpl.h  main.cpp
tmpl/ch_06_debugging/: CMakeLists.txt  debug_error.cpp  debug_error.h  main.cpp  tracer.cpp  tracer.h
tmpl/ch_07_models/: CMakeLists.txt  about.h  direct_instance.cpp  direct_instance.h  include_model.cpp  main.cpp  separation_model.h
tmpl/ch_08_params/: CMakeLists.txt  about.h  arguments.h  main.cpp  non_type_params.h  sfinae.h  template_params.h  tmpl_members.h
tmpl/ch_09_params/: CMakeLists.txt  about.h  adl.h  inherit_tmpl.h  main.cpp
tmpl/ch_10_instantiation/: CMakeLists.txt  about.h  by_request.h  main.cpp
tmpl/ch_15_properties/: CMakeLists.txt  func_types.h  main.cpp  properties.h
tmpl/ch_16_inherit/: CMakeLists.txt  about.h  crtp.h  empty_base.h  main.cpp  name_params.h  virtual.h
tmpl/ch_17_meta/: CMakeLists.txt  dot_product.h  if_then_else.h  main.cpp  sqrt.h
tmpl/ch_18_exceptions/: CMakeLists.txt  about.h  main.cpp
tmpl/ch_18_expressions/: CMakeLists.txt  efficient_array.h  main.cpp  simple_array.h
tmpl/ch_19_types/: CMakeLists.txt  about.h  class_types.h  compound_types.h  enum_types.h  main.cpp
tmpl/ch_20_smartptr/: CMakeLists.txt  about.h  counting_ptr.h  main.cpp  simple_ptr.h
tmpl/ch_21_tuples/: CMakeLists.txt  about.h  recursive_pair.h  tuple.h
tmpl/ch_22_functors/: CMakeLists.txt  about.h  main.cpp  simple_functors.h
tmpl/part_01_basics/: CMakeLists.txt  about.h  basics_tmpl.h  class_tmpl.h  main.cpp  (+4 more)
valgrind/: CMakeLists.txt  Makefile  val.cpp
(+815 files in other folders)
