cmake_minimum_required(VERSION 2.8)
project(templates_vandervoode CXX)
set(TARGET templates_vandervoode)


add_subdirectory(part_01_basics)
add_subdirectory(part_01_debugging)
add_subdirectory(part_01_basics)
add_subdirectory(part_01_debugging)
add_subdirectory(part_01_models)
add_subdirectory(part_02_instantiation)
add_subdirectory(part_02_names)
add_subdirectory(part_02_params)
add_subdirectory(part_03_expressions)
add_subdirectory(part_03_inherit)
add_subdirectory(part_03_meta)
add_subdirectory(part_03_properties)
add_subdirectory(part_03_types)
add_subdirectory(part_04_functors)
add_subdirectory(part_04_smartptr)
add_subdirectory(part_04_tuples)















